fix broken json

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,10 @@
 {
   "redirects": [
-    { "source": "/me", "destination": "https://scottspence.com#about" }
-    { "source": "/portfolio", "destination": "https://scottspence.com#portfolio" }
+    { "source": "/me", "destination": "https://scottspence.com#about" },
+    {
+      "source": "/portfolio",
+      "destination": "https://scottspence.com#portfolio"
+    },
     { "source": "/now", "destination": "https://scottspence.com#now" }
   ]
 }
